# uvc-gadget

./: .gitignore  CMakeLists.txt  main.cpp  mjpeg_image.hpp  uvc-gadget.c  uvc_gadget.cpp  uvc_gadget.hpp
